# CommitCraft

./: .env.example  .gitignore  CHANGELOG  CHANGELOG.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
.commitcraft/: context.toml
.github/workflows/: docs.yml  release.yml
docs/: cli.md  cli_help.txt  config.md  defaults.md  migration.md  recipes.md  reference.md  troubleshooting.md
promptfoo-tests/: get_testing_data.py
promptfoo-tests/system_prompt/: prompt1.json  prompt2.json  promptfooconfig.yaml
src/: CommitCraft.py  defaults.py  main.py
src/commitcraft/: CommitCraft.py  __init__.py  __main__.py  config_handler.py  defaults.py
