[tool.poetry]
name = "commitcraft"
version = "0.1.0"
description = "A simple tool to use LLM and git diff to craft meaningfull commit messages."
authors = ["Felix-Pedro <felix@auneria.com>"]
license = "AGPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
pyyaml = "^6.0.2"
tomli = "^2.0.2"
ollama = "^0.3.3"
requests = "^2.32.3"
toml = "^0.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
