[tool.poetry]
name = "commitcraft"
version = "1.0.0"
description = "A simple tool to use LLM and git diff to craft meaningfull commit messages."
authors = ["Felix-Pedro <felix@auneria.com>"]
license = "AGPL-3.0"
readme = "README.md"
repository = "https://github.com/Felix-Pedro/CommitCraft"
keywords = [
    "llm",
    "commit",
    "ai",
    "openai",
    "ollama",
    "groq",
    "git",
    "dev",
    "commit messages",
]
classifiers = [
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
pyyaml = "^6.0.2"
tomli = "^2.0.2"
requests = "^2.32.3"
toml = "^0.10.2"
ollama = "^0.3.3"
pydantic = "^2.9.2"
openai = { version = "^1.52.0", optional = true }
groq = { version = "^0.11.0", optional = true }
google-genai = { version = "^0.2.0", optional = true }
typer = "^0.12.5"
jinja2 = "^3.1.4"
rich = "^14.2.0"

[tool.poetry.extras]
openai = ["openai"]
groq = ["groq"]
google = ["google-genai"]
all-providers = ["openai", "groq", "google-genai"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
CommitCraft = "commitcraft.__main__:app"
